criado swagger para categoria de usuario e livro, testado e funcionando
