# dist/swagger.json
@@ -20,6 +20,40 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"CategoriaUsuarioDTO": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"nome": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"nome"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CategoriaLivroDTO": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"nome": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"nome"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -30,6 +64,86 @@
 		"description": "Documentacao da API usando Swagger"
 	},
 	"paths": {
+		"/categoriaUsuario": {
+			"get": {
+				"operationId": "ListarCategoriasUsuario",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"CategoriaUsuario"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "AddCategoriaUsuario",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					},
+					"201": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"CategoriaUsuario"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CategoriaUsuarioDTO"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/categoriaLivro": {
 			"get": {
 				"operationId": "ListarCategoriasLivro",
@@ -43,9 +157,6 @@
 								}
 							}
 						}
-					},
-					"204": {
-						"description": "No content"
 					},
 					"400": {
 						"description": "",
@@ -63,6 +174,54 @@
 				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "AddCategoriaLivro",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					},
+					"201": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"CategoriaLivro"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CategoriaLivroDTO"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
