# src/controller/CategoriaLivroController.ts
@@ -1,6 +1,7 @@
-import {Controller, Get, Res, Route, Tags, TsoaResponse} from "tsoa";
+import { Body, Controller, Delete, Get, Path, Post, Put, Query, Res, Route, Tags, TsoaResponse} from "tsoa";
 import { CategoriaLivroService } from "../service/CategoriaLivroService";
 import { BasicResponseDto } from "../model/dto/BasicResponseDto";
+import { CategoriaLivroDTO } from "../model/dto/CategoriaLivroDto";
 
 @Route('categoriaLivro')
 @Tags('CategoriaLivro')
@@ -13,7 +14,7 @@ export class CategoriaLivroController extends Controller{
     async listarCategoriasLivro(
         @Res() fail: TsoaResponse<400, BasicResponseDto>,
         @Res() success: TsoaResponse<200, BasicResponseDto>
-    ): Promise<void> {
+    ): Promise< | void> {
         try {
             const categoriasLivro = await this.categoriaLivroService.getCategoriasLivro();
             return success(200, new BasicResponseDto('Lista de categorias de livros', categoriasLivro));
@@ -22,4 +23,17 @@ export class CategoriaLivroController extends Controller{
         }
     }
 
+    @Post()
+    async addCategoriaLivro(
+        @Body() dto: CategoriaLivroDTO,
+        @Res() fail: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<201, BasicResponseDto>
+    ): Promise< | void> {
+        try {
+            const novaCategoriaLivro = await this.categoriaLivroService.criarCategoriaLivro(dto.nome);
+            return success(201, new BasicResponseDto('Categoria criada com sucesso', novaCategoriaLivro));
+        } catch (error: any) {
+            return fail(400, new BasicResponseDto(error.message, undefined));
+        }
+    }
 }
